--- a/app/views/public/books/index.html.erb
+++ b/app/views/public/books/index.html.erb
@@ -1,21 +1,13 @@
-<table class='table table-hover table-inverse'>
-  <thead>
-    <tr>
-      <th>タイトル</th>
-      <th>著者</th>
-      <th>概要</th>
-      <th></th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.author %></td>
-        <td><%= book.item_caption %></td>
-        <td><%= link_to (image_tag(book.medium_image_url)), book.item_url %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="search-box">
+  <%= form_with url: books_path, method: :get do |f| %>
+    <div class="form-group">
+      <%= f.text_field :keyword, class: "form-control" %>
+      <%= f.submit "本の題名を検索", class: "form-control" %>
+    </div>
+  <% end %>
+  <% if @books.present? %>
+    <%= render "public/books/book" %>
+  <% else %>
+    検索結果は見つかりませんでした
+  <% end %>
+</div>
