--- a/app/views/public/books/_book.html.erb
+++ b/app/views/public/books/_book.html.erb
@@ -14,7 +14,8 @@
         <td><%= book.title %></td>
         <td><%= book.author %></td>
         <td><%= book.item_caption %></td>
-        <td><%= link_to (image_tag(book.medium_image_url)), book_path(book) %></td>
+        <td><%= book.isbn %></td>
+        <td><%= link_to (image_tag(book.medium_image_url)), book_path(id:book.isbn) %></td>
       </tr>
     <% end %>
   </tbody>
