--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -1,1 +1,7 @@
 <%= image_tag(@book.medium_image_url) %>
+
+<%= form_with model: @post do |f| %>
+  <%= f.text_area :text %>
+  <%= f.submit "投稿" %>
+
+<% end %>
