--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,7 +1,14 @@
 
 <% @posts.each do |post| %>
 
-  <%= image_tag post.book.large_image_url %>
-  <%= post.title %>
+  <%#= image_tag post.book.large_image_url %>
+  <%= post.text %>
+
+<% end %>
+
+<% @books.each do |book| %>
+
+  <%#= image_tag post.book.large_image_url %>
+  <%= book.title %>
 
 <% end %>
