--- a/app/views/public/books/show.html.erb
+++ b/app/views/public/books/show.html.erb
@@ -3,7 +3,13 @@
 <%= @book.item_caption %>
 
 
-<%= form_with model: @post do |f| %>
+<%= form_with model: @post, url: posts_path do |f| %>
+  <%= f.hidden_field :title, :value => @book.title %>
+  <%= f.hidden_field :author, :value => @book.author %>
+  <%= f.hidden_field :sales_date, :value => @book.sales_date %>
+  <%= f.hidden_field :item_caption, :value => @book.item_caption %>
+  <%= f.hidden_field :large_image_url, :value => @book.large_image_url %>
+  <%= f.hidden_field :isbn, :value => @book.isbn %>
   <%= f.text_area :text %>
   <%= f.submit "投稿" %>
 
