--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,10 @@
               <div class="collapse navbar-collapse">
                 <ul class="navbar-nav w-100 nav-justified">
                   <% if customer_signed_in? %>
+                    <li class="nav-item"><%= link_to "マイページ", customers_current_customer_path %></li>
+                    <li class="nav-item"><%= link_to "投稿", posts_path %></li>
                     <li class="nav-item"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
+
                   <% elsif admin_signed_in? %>
                     <li class="nav-item"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
                   <% else %>
