--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
                 <ul class="navbar-nav w-100 nav-justified">
                   <% if customer_signed_in? %>
                     <li class="nav-item"><%= link_to "マイページ", customers_current_customer_path %></li>
+                    <li class="nav-item"><%= link_to "検索ページ", books_path %></li>
                     <li class="nav-item"><%= link_to "投稿", posts_path %></li>
                     <li class="nav-item"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete %></li>
 
