--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -24,7 +24,7 @@
           <% @posts.each do |post| %>
           <tr>
             <td>
-              <%= link_to admin_posts_path(post.id) do %>
+              <%= link_to admin_post_path(post.id) do %>
                 <%= post.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
               <% end %>
             </td>
